# ChangeLog for dev-ruby/ruby-glib2
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.47 2007/11/13 07:49:45 opfer Exp $

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-glib2-0.16.0-r2.ebuild:
  stable x86, bug 198845

  12 Nov 2007; Samuli Suominen <drac@gentoo.org>
  ruby-glib2-0.16.0-r2.ebuild:
  amd64 stable wrt #198845

*ruby-glib2-0.16.0-r2 (26 Oct 2007)

  26 Oct 2007; Rémi Cardona <remi@gentoo.org>
  +files/ruby-glib2-0.16.0-typedef.patch, +ruby-glib2-0.16.0-r2.ebuild:
  add Fedora patch to fix bug #193898

*ruby-glib2-0.16.0-r1 (18 Oct 2007)

  18 Oct 2007; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-glib2-0.16.0-glib-2.14.patch, +ruby-glib2-0.16.0-r1.ebuild:
  Fix problem with new glib-2.14 API, bug 194303.

  21 May 2007; Raúl Porcel <armin76@gentoo.org> ruby-glib2-0.16.0.ebuild:
  alpha stable wrt #169094

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-glib2-0.16.0.ebuild:
  stable amd64, bug 169094

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-glib2-0.16.0.ebuild:
  ia64 stable wrt bug 169094

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-glib2-0.16.0.ebuild:
  Stable on sparc wrt #169094

  04 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-glib2-0.16.0.ebuild:
  stable x86; bug 169094

  03 Mar 2007; nixnut <nixnut@gentoo.org> ruby-glib2-0.16.0.ebuild:
  Stable on ppc wrt bug 169064

*ruby-glib2-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org> +ruby-glib2-0.16.0.ebuild:
  Version Bump.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-glib2-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha

*ruby-glib2-0.15.0 (29 Aug 2006)

  29 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-glib2-0.15.0.ebuild:
  Version bump

  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  ruby-glib2-0.12.0.ebuild: