@@ -1,11 +1,11 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-glib2/Attic/ruby-glib2-0.16.0-r2.ebuild,v 1.3 2007/11/13 07:49:45 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-glib2/Attic/ruby-glib2-0.16.0-r2.ebuild,v 1.4 2007/11/14 14:58:31 armin76 Exp $
 
 inherit ruby ruby-gnome2 eutils
 
 DESCRIPTION="Ruby Glib2 bindings"
-KEYWORDS="~alpha amd64 ~ia64 ~ppc ~sparc x86"
+KEYWORDS="alpha amd64 ia64 ~ppc sparc x86"
 IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND=">=dev-libs/glib-2"
