@@ -1,11 +1,11 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtk2/Attic/ruby-gtk2-0.16.0-r1.ebuild,v 1.3 2007/11/13 07:51:15 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtk2/Attic/ruby-gtk2-0.16.0-r1.ebuild,v 1.4 2007/11/14 14:59:18 armin76 Exp $
 
 inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby Gtk2 bindings"
-KEYWORDS="~alpha amd64 ~ia64 ~ppc ~sparc x86"
+KEYWORDS="alpha amd64 ia64 ~ppc sparc x86"
 IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND=">=x11-libs/gtk+-2"
