@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-glib2
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.47 2007/11/13 07:49:45 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.48 2007/11/14 14:58:31 armin76 Exp $
+
+  14 Nov 2007; Raúl Porcel <armin76@gentoo.org>
+  ruby-glib2-0.16.0-r2.ebuild:
+  alpha/ia64/sparc stable wrt #198845
 
   13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
   ruby-glib2-0.16.0-r2.ebuild:
